# Stratego

./: README.md  generate_assets.py  pyproject.toml
.github/agents/: build_master.md  senior_business_analyst.md  senior_software_developer.md  senior_test_engineer.md  senior_ux_designer.md  software_architect.md
.github/workflows/: ci.yml  generate-assets.yml
planning/: README.md  epics.md  implementation-plan.md  product-backlog.md  sprint-phase-1-foundation.md  sprint-phase-2-core-game-rules.md  sprint-phase-3-application-layer.md  sprint-phase-4-presentation-layer.md  sprint-phase-5-ai-layer.md  sprint-phase-6-infrastructure.md  sprint-phase-7-custom-armies-and-polish.md  user-stories-epic-1-foundation.md  user-stories-epic-2-domain-layer.md  user-stories-epic-3-application-layer.md  user-stories-epic-4-presentation-layer.md  user-stories-epic-5-ai-layer.md  user-stories-epic-6-infrastructure.md  user-stories-epic-7-custom-armies.md  user-stories-epic-8-unit-task-popup.md  ux-accessibility.md  ux-asset-inventory-and-sourcing-guide.md  ux-competitive-analysis.md  ux-heuristics-evaluation.md  ux-index.md  ux-user-journeys-task-popup.md  ux-user-journeys.md  ux-visual-style-guide.md  ux-wireframe-army-select.md  ux-wireframe-game-over.md  ux-wireframe-load-game.md  ux-wireframe-main-menu.md  ux-wireframe-playing.md  ux-wireframe-settings.md  ux-wireframe-setup.md  ux-wireframe-start-game.md  ux-wireframe-task-popup.md
specifications/: ai_strategy.md  architecture_overview.md  custom_armies.md  data_models.md  game_components.md  screen_flow.md  system_design.md  technology_stack.md
specifications/adr/: ADR-001-python-version.md  ADR-002-architecture-pattern.md  ADR-003-immutable-game-state.md  ADR-004-json-persistence.md  ADR-005-ai-algorithm.md  ADR-006-custom-army-mod-system.md
src/: __main__.py
src/Tests/: conftest.py
src/ai/: ai_orchestrator.py  evaluation.py  minimax.py  opening_book.py  probability_tracker.py
src/application/: commands.py  event_bus.py  events.py  game_controller.py  (+3 more)
(+91 files in other folders)
