[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratego"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.4",
    "pygame-gui>=0.6",
]

[project.scripts]
stratego = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "S", "I"]

[tool.coverage.run]
source = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
