[project]
name = "stratego"
version = "0.1.0"
description = "A Python implementation of the classic Stratego board game"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.4",
    "pygame-gui>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "mypy>=1.10",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/Tests"]
addopts = "--strict-markers -v"
markers = [
    "unit: fast, isolated unit tests",
    "integration: multi-component integration tests",
    "slow: tests that take more than 1 second",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/Tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
strict = true
exclude = ["src/Tests/"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "S", "I", "UP"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"src/Tests/**/*.py" = ["S101", "S105", "S106", "S108", "S110"]
